Data Serialization and Model Binding

--- a/ExploreCalifornia.csproj
+++ b/ExploreCalifornia.csproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="Controllers\AuthorizeController.cs" />
+    <Compile Include="Controllers\ReservationController.cs" />
     <Compile Include="DataAccess\Models\Reservation.cs" />
     <Compile Include="DTOs\AuthorizeRequestDto.cs" />
     <Compile Include="DTOs\TourDto.cs" />
