--- a/packages.config
+++ b/packages.config
@@ -2,13 +2,16 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="3.2.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net461" />
@@ -20,5 +23,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net471" />
+  <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net461" />
   <package id="Thinktecture.IdentityModel.Core" version="1.4.0" targetFramework="net471" />
 </packages>
